--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.22",
     "pinia": "^2.1.7",
+    "swiper": "^11.1.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
