--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "vee-validate": "^4.12.8",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vue-tel-input": "^9.1.3",
-    "yup": "^1.4.0"
+    "vue-tel-input": "^9.1.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
