--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.22",
+    "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "swiper": "^11.1.3",
     "vee-validate": "^4.12.8",
