--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vee-validate": "^4.12.8",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vue-tel-input": "^9.1.3"
+    "vue-tel-input": "^9.1.3",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
