--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-tel-input": "^9.1.3",
+    "vue-the-mask": "^0.11.1",
     "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
     "@types/vue-tel-input": "^2.1.6",
+    "@types/vue-the-mask": "^0.11.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
